--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 * {
     box-sizing: border-box;
-    border-radius: 20px;
 }
 
 body {
@@ -30,6 +29,7 @@ body {
 .container {
     background: rgba(0, 0, 0, 0.3);
     position: center;
+    border-radius: 20px;
 }
 
 .login-form {
@@ -38,6 +38,7 @@ body {
     background-size: cover;
     background: rgba(0, 0, 0, 0.5);
     padding: 2px;
+    border-radius: 20px 20px 0 0;
 
 }
 
